--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-manager_nodejs",
   "version": "1.0.0",
   "description": "Node JS Assignment",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
